--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,5 @@
 // Bootstrap
-@import 'bootstrap/scss/bootstrap';
-
+@import '~bootstrap/scss/bootstrap';
 
 body {
     font-size: 14px;
@@ -9,4 +8,50 @@ body {
 
 nav.navbar.navbar-expand-lg {
     margin-bottom: 20px;
+}
+//底部样式
+footer {
+    margin-top: 45px;
+    padding-top: 5px;
+    border-top: 1px solid #eaeaea;
+    color: #777;
+    font-size: 13px;
+    font-weight: bold;
+
+    a {
+        color: #555;
+    }
+
+    a:hover {
+        color: #222;
+    }
+
+    img.brand-icon {
+        width: 17px;
+        height: 17px;
+    }
+}
+//用户头像
+nav.navbar.navbar-expand-lg {
+    margin-bottom: 20px;
+}
+section.user_info {
+    padding-bottom: 10px;
+    margin-top: 20px;
+    text-align: center;
+    .gravatar {
+        float: none;
+        max-width: 70px;
+    }
+    h1 {
+        font-size: 1.4em;
+        letter-spacing: -1px;
+        margin-bottom: 3px;
+        margin-top: 15px;
+    }
+}
+.gravatar {
+    float: left;
+    max-width: 50px;
+    border-radius: 50%;
 }
