--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12014,3 +12014,12 @@ section.user_info h1, section.user_info .h1 {
   max-width: 50px;
   border-radius: 50%;
 }
+
+.gravatar_edit {
+  margin: 15px auto;
+  text-align: center;
+}
+.gravatar_edit .gravatar {
+  float: none;
+  max-width: 100px;
+}
