管理员可删除用户

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -63,3 +63,9 @@ section.user_info {
         max-width: 100px;
     }
 }
+
+.delete-btn {
+    float: right;
+    position: relative;
+    right: 0;
+}
