--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12023,3 +12023,14 @@ section.user_info h1, section.user_info .h1 {
   float: none;
   max-width: 100px;
 }
+
+.delete-btn {
+  float: right;
+  position: relative;
+  right: 0;
+}
+
+.status-delete-btn {
+  width: -moz-max-content;
+  width: max-content;
+}
